[project]
name = "project-homework"
version = "0.1.0"
description = ""
authors = [
    {name = "Михаил Ергунов",email = "ergunov.mih@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
